// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GlobalTemplateFieldForm rendering tests GlobalTemplateFieldForm - type NUMBER - test 1`] = `
<div>
  <div
    class="grid grid-cols-2 gap-4"
    data-testid="template-field-form"
  >
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="name"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_0_-form-item"
      >
        Name
      </label>
      <input
        aria-describedby="_r_0_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_0_-form-item"
        name="name"
        placeholder="Name des Feldes"
        value="name-1"
      />
      <p
        class="text-destructive text-sm"
        data-slot="form-message"
        id="_r_0_-form-item-message"
      >
        <span
          class="text-slate-500"
        >
          Verwenden Sie diesen Namen als {{name-1}}
        </span>
      </p>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="label"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_1_-form-item"
      >
        Label
      </label>
      <input
        aria-describedby="_r_1_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_1_-form-item"
        name="label"
        placeholder="Label des Feldes"
        value="label 1"
      />
      <p
        class="text-destructive text-sm"
        data-slot="form-message"
        id="_r_1_-form-item-message"
      >
        <span
          class="invisible text-sm"
        >
          .
        </span>
      </p>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="type"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_2_-form-item"
      >
        Typ
      </label>
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_3_"
        aria-describedby="_r_2_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
        data-size="default"
        data-slot="form-control"
        data-state="closed"
        dir="ltr"
        id="_r_2_-form-item"
        role="combobox"
        type="button"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          Nummer
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down size-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-portal"
      />
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="defaultValue"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_4_-form-item"
      >
        Standardwert
      </label>
      <input
        aria-describedby="_r_4_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_4_-form-item"
        name="defaultValue"
        placeholder="Standardwert des Feldes"
        type="number"
        value="defaultValue-1"
      />
    </div>
    <div
      class="grid gap-2 col-span-2"
      data-slot="form-item"
      data-testid="description"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_5_-form-item"
      >
        Beschreibung
      </label>
      <textarea
        aria-describedby="_r_5_-form-item-description"
        aria-invalid="false"
        class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
        data-slot="form-control"
        data-testid="textarea"
        id="_r_5_-form-item"
        name="description"
        placeholder="Beschreibung des Feldes"
        rows="2"
      >
        description 1
      </textarea>
    </div>
    <div
      class="grid gap-2 col-span-2"
      data-slot="form-item"
      data-testid="required"
    >
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="true"
          aria-describedby="_r_6_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="checked"
          id="_r_6_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="checked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
          data-error="false"
          data-slot="form-label"
          for="_r_6_-form-item"
        >
          Dieses Feld ist erforderlich
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`GlobalTemplateFieldForm rendering tests GlobalTemplateFieldForm - type SELECT - test 1`] = `
<div>
  <div
    class="grid grid-cols-2 gap-4"
    data-testid="template-field-form"
  >
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="name"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_f_-form-item"
      >
        Name
      </label>
      <input
        aria-describedby="_r_f_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_f_-form-item"
        name="name"
        placeholder="Name des Feldes"
        value="name-1"
      />
      <p
        class="text-destructive text-sm"
        data-slot="form-message"
        id="_r_f_-form-item-message"
      >
        <span
          class="text-slate-500"
        >
          Verwenden Sie diesen Namen als {{name-1}}
        </span>
      </p>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="label"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_g_-form-item"
      >
        Label
      </label>
      <input
        aria-describedby="_r_g_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_g_-form-item"
        name="label"
        placeholder="Label des Feldes"
        value="label 1"
      />
      <p
        class="text-destructive text-sm"
        data-slot="form-message"
        id="_r_g_-form-item-message"
      >
        <span
          class="invisible text-sm"
        >
          .
        </span>
      </p>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="type"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_h_-form-item"
      >
        Typ
      </label>
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_i_"
        aria-describedby="_r_h_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
        data-size="default"
        data-slot="form-control"
        data-state="closed"
        dir="ltr"
        id="_r_h_-form-item"
        role="combobox"
        type="button"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          Auswahl
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down size-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-portal"
      />
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="defaultValue"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_j_-form-item"
      >
        Standardwert
      </label>
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_k_"
        aria-describedby="_r_j_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
        data-size="default"
        data-slot="form-control"
        data-state="closed"
        dir="ltr"
        id="_r_j_-form-item"
        role="combobox"
        type="button"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        />
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down size-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-portal"
      />
    </div>
    <div
      class="grid gap-2 col-span-2"
      data-slot="form-item"
      data-testid="options"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_l_-form-item"
      >
        Optionen
      </label>
      <div
        class="flex flex-wrap gap-2"
        data-testid="current-values"
      >
        <div
          class="flex items-center gap-2 rounded-full bg-slate-100 px-3 py-1"
        >
          <span
            class="text-sm"
          >
            option 1
          </span>
          <button
            class="cursor-pointer text-slate-500 hover:text-slate-700"
            data-testid="remove-value-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex items-center gap-2 rounded-full bg-slate-100 px-3 py-1"
        >
          <span
            class="text-sm"
          >
            option 2
          </span>
          <button
            class="cursor-pointer text-slate-500 hover:text-slate-700"
            data-testid="remove-value-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <input
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="input"
          data-testid="input"
          placeholder="Option eingeben"
          value=""
        />
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="add-value-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Hinzufügen
        </button>
      </div>
    </div>
    <div
      class="grid gap-2 col-span-2"
      data-slot="form-item"
      data-testid="description"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_m_-form-item"
      >
        Beschreibung
      </label>
      <textarea
        aria-describedby="_r_m_-form-item-description"
        aria-invalid="false"
        class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
        data-slot="form-control"
        data-testid="textarea"
        id="_r_m_-form-item"
        name="description"
        placeholder="Beschreibung des Feldes"
        rows="2"
      >
        description 1
      </textarea>
    </div>
    <div
      class="grid gap-2 col-span-2"
      data-slot="form-item"
      data-testid="required"
    >
      <div
        class="flex items-center space-x-2"
      >
        <button
          aria-checked="true"
          aria-describedby="_r_n_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="checked"
          id="_r_n_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="checked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
          data-error="false"
          data-slot="form-label"
          for="_r_n_-form-item"
        >
          Dieses Feld ist erforderlich
        </label>
      </div>
    </div>
  </div>
</div>
`;
